--- a/app/src/main/res/layout/liquor_list_item.xml
+++ b/app/src/main/res/layout/liquor_list_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="150dp">
 
         <ImageView
+            android:id="@+id/liquor_background_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
@@ -23,23 +24,59 @@
             android:orientation="vertical"
             android:padding="15dp">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Beer"
-                android:textColor="@color/colorAccent"
-                android:textSize="16sp" />
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/liquor_type"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Beer"
+                    android:textColor="@color/md_grey_300"
+                    android:textSize="16sp" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="#e5e5e5" />
+
+                <TextView
+                    android:id="@+id/liquor_brand"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Kingfisher"
+                    android:textColor="@color/md_grey_300"
+                    android:textSize="16sp" />
+            </LinearLayout>
 
             <TextView
+                android:id="@+id/liquor_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Kingfisher Premium"
                 android:textColor="@color/colorAccent"
-                android:textSize="25sp" />
+                android:textSize="30sp" />
+
+            <TextView
+                android:id="@+id/liquor_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxLines="3"
+                android:text="A 7 year old rum from Uttar Pradesh in India. It's one of the largest selling rums in the world, almost all thanks to word of mouth."
+                android:textColor="@color/md_grey_300"
+                android:textSize="12sp" />
 
         </LinearLayout>
 
         <TextView
+            android:id="@+id/liquor_likes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right"
